home/barassistant/bar-salt-rim.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application.name: barassistant
  name: bar-salt-rim
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: bar-salt-rim
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-salt-rim
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-salt-rim
  template:
    metadata:
      labels:
        app: bar-salt-rim
    spec:
      automountServiceAccountToken: false
      containers:
        - name: salt-rim
          image: barassistant/salt-rim:3.8.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 128Mi
          ports:
            - containerPort: 8080
