home/barassistant/barassistant.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: barassistant
  name: barassistant
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: barassistant
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barassistant
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
  labels:
    app.kubernetes.io/name: barassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: barassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: barassistant
    spec:
      automountServiceAccountToken: false
      containers:
        - name: barassistant
          image: barassistant/server:5.5.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
              ephemeral-storage: 128Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/cocktails/storage/bar-assistant
              name: bar-data
      volumes:
        - name: bar-data
          persistentVolumeClaim:
            claimName: barassistant-data
