home/barassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barassistant
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: bar.<homelab-domain>
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bar-salt-rim
                port:
                  number: 8080
          - path: /search/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bar-meili
                port:
                  number: 7700
          - path: /bar/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: barassistant
                port:
                  number: 8080
  tls:
    - hosts:
        - bar.<homelab-domain>
      secretName: "bar.<homelab-domain>-cert"
